--- a/pages/selectors.html
+++ b/pages/selectors.html
@@ -6,9 +6,9 @@ permalink: /selectors
 
 
 <div class="field JS_field">
+  <input type="text" class="field__focus-trigger">
   <div class="field__label">Assigned to</div>
   <div class="field__value">
-    <input type="text" value="nick de jaeger" class="field__input">
 
     <div class="selector selector--singleselect">
       <div class="selector__item selector__item--selected JS_selectorItem">
@@ -22,6 +22,7 @@ permalink: /selectors
 </div>
 
 <div class="field JS_field">
+  <input type="text" value="" class="field__focus-trigger">
   <div class="field__label">Assigned to</div>
   <div class="field__value">
     <input type="text" value="" class="field__input">
@@ -29,18 +30,19 @@ permalink: /selectors
 </div>
 
 <div class="field JS_field">
+  <input type="text" value="" class="field__focus-trigger">
   <div class="field__label">Assigned to</div>
   <div class="field__value">
-    <input type="text" value="" class="field__input">
+
   </div>
 </div>
 
 <h2>With popup</h2>
 
 <div class="field JS_field">
+  <input type="text" value="" class="field__focus-trigger">
   <div class="field__label">Due date</div>
   <div class="field__value">
-    <input type="text" value="11/17/2017" class="field__input">
 
     <div class="selector selector--singleselect">
       <div class="selector__item selector__item--selected JS_selectorItem">
@@ -59,9 +61,9 @@ permalink: /selectors
 </div>
 
 <div class="field field--error JS_field">
+  <input type="text" value="" class="field__focus-trigger">
   <div class="field__label">Status</div>
   <div class="field__value">
-    <input type="text" value="Not started" class="field__input">
 
     <div class="selector selector--singleselect JS_has-popup JS_has-popup--error" data-popid="#multiSelector-1">
       <div class="selector__item selector__item--selected JS_selectorItem">
@@ -76,9 +78,9 @@ permalink: /selectors
 </div>
 
 <div class="field field--error JS_field">
+  <input type="text" value="" class="field__focus-trigger">
   <div class="field__label">Status</div>
   <div class="field__value">
-    <input type="text" value="" class="field__input">
 
     <div class="selector selector--singleselect JS_has-popup" data-popid="#multiSelector-2">
       <div class="selector__item selector__item--selected JS_selectorItem">
@@ -95,9 +97,9 @@ permalink: /selectors
 <h2>Without popup</h2>
 
 <div class="field JS_field">
+  <input type="text" value="" class="field__focus-trigger">
   <div class="field__label">Danger level</div>
   <div class="field__value">
-    <input type="text" value="Low" class="field__input">
 
     <div class="selector selector--singleselect selector--expanded JS_selector">
       <div class="selector__item selector__item--selected JS_selectorItem">
@@ -123,9 +125,9 @@ permalink: /selectors
 </div>
 
 <div class="field JS_field">
+  <input type="text" value="" class="field__focus-trigger">
   <div class="field__label">Product contact</div>
   <div class="field__value">
-    <input type="text" value="Heet" class="field__input">
 
     <div class="selector selector--multiselect selector--expanded JS_selector">
       <div class="selector__item selector__item--selected JS_selectorItem">
@@ -154,9 +156,9 @@ permalink: /selectors
 </div>
 
 <div class="field JS_field">
+  <input type="text" value="" class="field__focus-trigger">
   <div class="field__label">Status</div>
   <div class="field__value">
-    <input type="text" value="Not started" class="field__input">
 
     <div class="selector selector--singleselect selector--expanded JS_selector">
       <div class="selector__item selector__item--selected JS_selectorItem">
@@ -185,9 +187,9 @@ permalink: /selectors
 </div>
 
 <div class="field JS_field">
+  <input type="text" value="" class="field__focus-trigger">
   <div class="field__label">Tags</div>
   <div class="field__value">
-    <input type="text" value="dev-team back-end 297" class="field__input">
 
     <div class="selector selector--multiselect selector--expanded JS_selector">
       <div class="selector__item selector__item--selected JS_selectorItem">
@@ -216,9 +218,9 @@ permalink: /selectors
 </div>
 
 <div class="field JS_field">
+  <input type="text" value="" class="field__focus-trigger">
   <div class="field__label">Status</div>
   <div class="field__value">
-    <input type="text" value="Ongoing" class="field__input">
 
     <div class="selector selector--singleselect selector--expanded JS_selector">
       <div class="selector__item JS_selectorItem">
@@ -247,9 +249,9 @@ permalink: /selectors
 </div>
 
 <div class="field JS_field">
+  <input type="text" value="" class="field__focus-trigger">
   <div class="field__label">Status</div>
   <div class="field__value">
-    <input type="text" value="Ongoing" class="field__input">
 
     <div class="selector selector--singleselect selector--expanded JS_selector">
       <div class="selector__item JS_selectorItem">
@@ -311,9 +313,9 @@ permalink: /selectors
 </div>
 
 <div class="field JS_field">
+  <input type="text" value="" class="field__focus-trigger">
   <div class="field__label">Checkbox (filter in header)</div>
   <div class="field__value">
-    <input type="text" value=" " class="field__input">
 
     <div class="selector selector--multiselect selector--expanded JS_selector">
       <div class="selector__item selector__item--selected JS_selectorItem">
@@ -333,9 +335,9 @@ permalink: /selectors
 </div>
 
 <div class="field JS_field">
+  <input type="text" value="" class="field__focus-trigger">
   <div class="field__label">Checkbox</div>
   <div class="field__value">
-    <input type="text" value="" class="field__input">
 
     <div class="selector selector--singleselect selector--expanded JS_selector">
       <div class="selector__item selector__item--selected JS_selectorItem">
@@ -355,9 +357,9 @@ permalink: /selectors
 </div>
 
 <div class="field JS_field">
+  <input type="text" value="" class="field__focus-trigger">
   <div class="field__label">Checkbox</div>
   <div class="field__value">
-    <input type="text" value="" class="field__input">
 
     <div class="selector selector--singleselect selector--expanded JS_selector">
       <div class="selector__item selector__item--selected JS_selectorItem JS_toggle-progress">
@@ -391,8 +393,8 @@ permalink: /selectors
 <h2>Read-only with ellipsis</h2>
 
 <div class="field JS_field">
+  <input type="text" value="" class="field__focus-trigger">
   <div class="field__value">
-    <input type="text" value="Field Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum" class="field__input">
 
     <div class="selector selector--readonly">
       <div class="selector__item">
@@ -411,8 +413,8 @@ permalink: /selectors
 <h2>Filters</h2>
 
 <div class="field JS_field">
+  <input type="text" value="" class="field__focus-trigger">
   <div class="field__value">
-    <input type="text" value="Design" class="field__input">
 
     <div class="selector selector--readonly">
       <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">Include</div>
@@ -456,9 +458,9 @@ permalink: /selectors
 </div>
 
 <div class="field JS_field">
+  <input type="text" value="" class="field__focus-trigger">
   <div class="field__label">Description</div>
   <div class="field__value">
-    <input type="text" value="improvement" class="field__input">
 
     <div class="selector selector--readonly" >
       <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">Include</div>
@@ -486,9 +488,9 @@ permalink: /selectors
 </div>
 
 <div class="field JS_field">
+  <input type="text" value="" class="field__focus-trigger">
   <div class="field__label">Tags | Filter</div>
   <div class="field__value">
-    <input type="text" value="Design" class="field__input">
 
     <div class="selector selector--readonly JS_has-popup" data-popid="#filter-tagpicker">
       <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">Include</div>
@@ -532,9 +534,9 @@ permalink: /selectors
 </div>
 
 <div class="field JS_field">
+  <input type="text" value="" class="field__focus-trigger">
   <div class="field__label">Date | Filter</div>
   <div class="field__value">
-    <input type="text" value="next 2 weeks (12/03/18-25/03/18)" class="field__input">
 
     <div class="selector selector--readonly JS_has-popup" data-popid="#filter-datepicker">
       <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">Include</div>
@@ -576,9 +578,9 @@ permalink: /selectors
 <h2>Tag Picker</h2>
 
 <div class="field JS_field">
+  <input type="text" value="" class="field__focus-trigger">
   <div class="field__label">Tags</div>
   <div class="field__value">
-    <input type="text" value="282 2013_Maintenance workaround_available" class="field__input">
 
     <div class="selector selector--multiselect JS_has-popup JS_selector" data-popid="#multiSelector-tagpicker">
       <div class="selector__item selector__item--selected">
@@ -618,12 +620,14 @@ permalink: /selectors
   });
 
   function checkEmptyFields() {
-    $('.JS_field').each(function() {
-      if ($(this).find('input').val().length > 0 || $(this).find('.selector').length > 0) {
-        $(this).find('.field__label').removeClass('field__label--placeholder');
+    $('.JS_field .field__input').each(function() {
+      var thisLabel = $(this).parent().parent().find('.field__label');
+
+      if ($(this).val().length > 0 || $(this).parent().find('.selector').length > 0) {
+        thisLabel.removeClass('field__label--placeholder');
       }
       else {
-        $(this).find('.field__label').addClass('field__label--placeholder');
+        thisLabel.addClass('field__label--placeholder');
       }
     });
   }
