update signature in item header

--- a/pages/selectors.html
+++ b/pages/selectors.html
@@ -194,21 +194,21 @@ permalink: /selectors
     <div class="selector selector--multiselect selector--expanded JS_selector">
       <div class="selector__item selector__item--selected JS_selectorItem">
         <div class="selector__block">
-          <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #0BDA51;">ग़</div>
+          <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #0BDA51;"></div>
           <div class="selector__blockPart selector__blockPart--field">dev-team</div>
         </div>
       </div>
       <div class="selector__itemSeperator"></div>
       <div class="selector__item selector__item--selected JS_selectorItem">
         <div class="selector__block">
-          <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #00BFFF;">ग़</div>
+          <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #00BFFF;"></div>
           <div class="selector__blockPart selector__blockPart--field">back-end</div>
         </div>
       </div>
       <div class="selector__itemSeperator"></div>
       <div class="selector__item selector__item--selected JS_selectorItem">
         <div class="selector__block">
-          <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #F4CA16;">ग़</div>
+          <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #F4CA16;"></div>
           <div class="selector__blockPart selector__blockPart--field">297</div>
         </div>
       </div>
@@ -399,7 +399,7 @@ permalink: /selectors
     <div class="selector selector--readonly">
       <div class="selector__item">
         <div class="selector__block">
-          <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #0BDA51;">ބ</div>
+          <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #0BDA51;"></div>
           <div class="selector__blockPart selector__blockPart--label">Label</div>
           <div class="selector__blockSeperator"></div>
           <div class="selector__blockPart selector__blockPart--field">Field Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum</div>
@@ -420,14 +420,14 @@ permalink: /selectors
       <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">Include</div>
       <div class="selector__item">
         <div class="selector__block">
-          <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #00BFFF;">ग़</div>
+          <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #00BFFF;"></div>
           <div class="selector__blockPart selector__blockPart--field">Design</div>
         </div>
       </div>
       <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">And</div>
       <div class="selector__item">
         <div class="selector__block">
-          <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #0BDA51;">ग़</div>
+          <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #0BDA51;"></div>
           <div class="selector__blockPart selector__blockPart--field">Marketing</div>
         </div>
       </div>
@@ -441,14 +441,14 @@ permalink: /selectors
       <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">Exclude</div>
       <div class="selector__item">
         <div class="selector__block">
-          <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #0BDA51;">ग़</div>
+          <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #0BDA51;"></div>
           <div class="selector__blockPart selector__blockPart--field">front-end</div>
         </div>
       </div>
       <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">Or</div>
       <div class="selector__item">
         <div class="selector__block">
-          <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #F4CA16;">ग़</div>
+          <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #F4CA16;"></div>
           <div class="selector__blockPart selector__blockPart--field">back-end</div>
         </div>
       </div>
@@ -496,14 +496,14 @@ permalink: /selectors
       <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">Include</div>
       <div class="selector__item">
         <div class="selector__block">
-          <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #00BFFF;">ग़</div>
+          <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #00BFFF;"></div>
           <div class="selector__blockPart selector__blockPart--field">Design</div>
         </div>
       </div>
       <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">And</div>
       <div class="selector__item">
         <div class="selector__block">
-          <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #0BDA51;">ग़</div>
+          <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #0BDA51;"></div>
           <div class="selector__blockPart selector__blockPart--field">Marketing</div>
         </div>
       </div>
@@ -517,14 +517,14 @@ permalink: /selectors
       <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">Exclude</div>
       <div class="selector__item">
         <div class="selector__block">
-          <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #f4ca16;">ग़</div>
+          <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #f4ca16;"></div>
           <div class="selector__blockPart selector__blockPart--field">front-end</div>
         </div>
       </div>
       <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">Or</div>
       <div class="selector__item">
         <div class="selector__block">
-          <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #e30022;">ग़</div>
+          <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #e30022;"></div>
           <div class="selector__blockPart selector__blockPart--field">back-end</div>
         </div>
       </div>
@@ -585,13 +585,13 @@ permalink: /selectors
     <div class="selector selector--multiselect JS_has-popup JS_selector" data-popid="#multiSelector-tagpicker">
       <div class="selector__item selector__item--selected">
         <div class="selector__block">
-          <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #0BDA51;">ग़</div>
+          <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #0BDA51;"></div>
           <div class="selector__blockPart selector__blockPart--field">282</div>
           <div class="selector__itemSeperator"></div>
-          <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #F4CA16;">ग़</div>
+          <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #F4CA16;"></div>
           <div class="selector__blockPart selector__blockPart--field">2013_Maintenance</div>
           <div class="selector__itemSeperator"></div>
-          <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #E30022;">ग़</div>
+          <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #E30022;"></div>
           <div class="selector__blockPart selector__blockPart--field">workaround_available</div>
         </div>
       </div>
