--- a/pages/selectors.html
+++ b/pages/selectors.html
@@ -6,7 +6,6 @@ permalink: /selectors
 
 
 <div class="field JS_field">
-  <input type="text" class="field__focus-trigger">
   <div class="field__label">Assigned to</div>
   <div class="field__value">
 
@@ -22,25 +21,15 @@ permalink: /selectors
 </div>
 
 <div class="field JS_field">
-  <input type="text" value="" class="field__focus-trigger">
   <div class="field__label">Assigned to</div>
   <div class="field__value">
     <input type="text" value="" class="field__input">
   </div>
 </div>
 
-<div class="field JS_field">
-  <input type="text" value="" class="field__focus-trigger">
-  <div class="field__label">Assigned to</div>
-  <div class="field__value">
-
-  </div>
-</div>
-
 <h2>With popup</h2>
 
 <div class="field JS_field">
-  <input type="text" value="" class="field__focus-trigger">
   <div class="field__label">Due date</div>
   <div class="field__value">
 
@@ -61,7 +50,6 @@ permalink: /selectors
 </div>
 
 <div class="field field--error JS_field">
-  <input type="text" value="" class="field__focus-trigger">
   <div class="field__label">Status</div>
   <div class="field__value">
 
@@ -78,7 +66,6 @@ permalink: /selectors
 </div>
 
 <div class="field field--error JS_field">
-  <input type="text" value="" class="field__focus-trigger">
   <div class="field__label">Status</div>
   <div class="field__value">
 
@@ -97,7 +84,6 @@ permalink: /selectors
 <h2>Without popup</h2>
 
 <div class="field JS_field">
-  <input type="text" value="" class="field__focus-trigger">
   <div class="field__label">Danger level</div>
   <div class="field__value">
 
@@ -125,28 +111,27 @@ permalink: /selectors
 </div>
 
 <div class="field JS_field">
-  <input type="text" value="" class="field__focus-trigger">
   <div class="field__label">Product contact</div>
   <div class="field__value">
 
     <div class="selector selector--multiselect selector--expanded JS_selector">
       <div class="selector__item selector__item--selected JS_selectorItem">
         <div class="selector__block">
-          <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #F4CA16;">ॵ</div>
+          <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #F4CA16;"></div>
           <div class="selector__blockPart selector__blockPart--field">Heet</div>
         </div>
       </div>
       <div class="selector__itemSeperator"></div>
       <div class="selector__item JS_selectorItem">
         <div class="selector__block">
-          <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #FF0000;">फ</div>
+          <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #FF0000;"></div>
           <div class="selector__blockPart selector__blockPart--field">Brandbaar</div>
         </div>
       </div>
       <div class="selector__itemSeperator"></div>
       <div class="selector__item JS_selectorItem">
         <div class="selector__block">
-          <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #FF0000;">ॲ</div>
+          <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #FF0000;"></div>
           <div class="selector__blockPart selector__blockPart--field">Huidopname</div>
         </div>
       </div>
@@ -156,7 +141,6 @@ permalink: /selectors
 </div>
 
 <div class="field JS_field">
-  <input type="text" value="" class="field__focus-trigger">
   <div class="field__label">Status</div>
   <div class="field__value">
 
@@ -187,7 +171,6 @@ permalink: /selectors
 </div>
 
 <div class="field JS_field">
-  <input type="text" value="" class="field__focus-trigger">
   <div class="field__label">Tags</div>
   <div class="field__value">
 
@@ -218,28 +201,27 @@ permalink: /selectors
 </div>
 
 <div class="field JS_field">
-  <input type="text" value="" class="field__focus-trigger">
   <div class="field__label">Status</div>
   <div class="field__value">
 
     <div class="selector selector--singleselect selector--expanded JS_selector">
       <div class="selector__item JS_selectorItem">
         <div class="selector__block">
-          <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #F4CA16;">च</div>
+          <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #F4CA16;"></div>
           <div class="selector__blockPart selector__blockPart--field">Not started</div>
         </div>
       </div>
       <div class="selector__itemSeperator"></div>
       <div class="selector__item selector__item--selected JS_selectorItem">
         <div class="selector__block">
-          <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #00BFFF;">ण</div>
+          <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #00BFFF;"></div>
           <div class="selector__blockPart selector__blockPart--field">Ongoing</div>
         </div>
       </div>
       <div class="selector__itemSeperator"></div>
       <div class="selector__item JS_selectorItem">
         <div class="selector__block">
-          <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #0BDA51;">ऒ</div>
+          <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #0BDA51;"></div>
           <div class="selector__blockPart selector__blockPart--field">Done</div>
         </div>
       </div>
@@ -249,7 +231,6 @@ permalink: /selectors
 </div>
 
 <div class="field JS_field">
-  <input type="text" value="" class="field__focus-trigger">
   <div class="field__label">Status</div>
   <div class="field__value">
 
@@ -313,7 +294,6 @@ permalink: /selectors
 </div>
 
 <div class="field JS_field">
-  <input type="text" value="" class="field__focus-trigger">
   <div class="field__label">Checkbox (filter in header)</div>
   <div class="field__value">
 
@@ -335,7 +315,6 @@ permalink: /selectors
 </div>
 
 <div class="field JS_field">
-  <input type="text" value="" class="field__focus-trigger">
   <div class="field__label">Checkbox</div>
   <div class="field__value">
 
@@ -357,7 +336,6 @@ permalink: /selectors
 </div>
 
 <div class="field JS_field">
-  <input type="text" value="" class="field__focus-trigger">
   <div class="field__label">Checkbox</div>
   <div class="field__value">
 
@@ -393,7 +371,6 @@ permalink: /selectors
 <h2>Read-only with ellipsis</h2>
 
 <div class="field JS_field">
-  <input type="text" value="" class="field__focus-trigger">
   <div class="field__value">
 
     <div class="selector selector--readonly">
@@ -413,7 +390,6 @@ permalink: /selectors
 <h2>Filters</h2>
 
 <div class="field JS_field">
-  <input type="text" value="" class="field__focus-trigger">
   <div class="field__value">
 
     <div class="selector selector--readonly">
@@ -458,7 +434,6 @@ permalink: /selectors
 </div>
 
 <div class="field JS_field">
-  <input type="text" value="" class="field__focus-trigger">
   <div class="field__label">Description</div>
   <div class="field__value">
 
@@ -488,8 +463,7 @@ permalink: /selectors
 </div>
 
 <div class="field JS_field">
-  <input type="text" value="" class="field__focus-trigger">
-  <div class="field__label">Tags | Filter</div>
+  <div class="field__label">Tags  Filter</div>
   <div class="field__value">
 
     <div class="selector selector--readonly JS_has-popup" data-popid="#filter-tagpicker">
@@ -534,8 +508,7 @@ permalink: /selectors
 </div>
 
 <div class="field JS_field">
-  <input type="text" value="" class="field__focus-trigger">
-  <div class="field__label">Date | Filter</div>
+  <div class="field__label">Date  Filter</div>
   <div class="field__value">
 
     <div class="selector selector--readonly JS_has-popup" data-popid="#filter-datepicker">
@@ -578,7 +551,6 @@ permalink: /selectors
 <h2>Tag Picker</h2>
 
 <div class="field JS_field">
-  <input type="text" value="" class="field__focus-trigger">
   <div class="field__label">Tags</div>
   <div class="field__value">
 
