--- a/pages/selectors.html
+++ b/pages/selectors.html
@@ -21,8 +21,8 @@ permalink: /selectors
 </div>
 
 <div class="field JS_field">
-  <div class="field__label">Assigned to</div>
-  <div class="field__value">
+  <div class="field__label">Assigned to ܌</div>
+  <div class="field__value JS_has-popup" data-popid="#multiSelector-single">
     <input type="text" value="" class="field__input">
   </div>
 </div>
@@ -51,9 +51,9 @@ permalink: /selectors
 
 <div class="field field--error JS_field">
   <div class="field__label">Status</div>
-  <div class="field__value">
+  <div class="field__value JS_has-popup JS_has-popup--error" data-popid="#multiSelector-1">
 
-    <div class="selector selector--singleselect JS_has-popup JS_has-popup--error" data-popid="#multiSelector-1">
+    <div class="selector selector--singleselect">
       <div class="selector__item selector__item--selected JS_selectorItem">
         <div class="selector__block">
           <div class="selector__blockPart selector__blockPart--prefix JS_singleSelect--prefix" style="background-color: #ff9b9b;">ध</div>
@@ -67,9 +67,9 @@ permalink: /selectors
 
 <div class="field field--error JS_field">
   <div class="field__label">Status</div>
-  <div class="field__value">
+  <div class="field__value JS_has-popup" data-popid="#multiSelector-2">
 
-    <div class="selector selector--singleselect JS_has-popup" data-popid="#multiSelector-2">
+    <div class="selector selector--singleselect">
       <div class="selector__item selector__item--selected JS_selectorItem">
         <div class="selector__block">
           <div class="selector__blockPart selector__blockPart--prefix JS_singleSelect--prefix" style="background-color: #ff9b9b;">ध</div>
@@ -373,8 +373,8 @@ permalink: /selectors
 <div class="field JS_field">
   <div class="field__value">
 
-    <div class="selector selector--readonly">
-      <div class="selector__item">
+    <div class="selector selector--expanded">
+      <div class="selector__item selector__item--selected">
         <div class="selector__block">
           <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #0BDA51;"></div>
           <div class="selector__blockPart selector__blockPart--label">Label</div>
@@ -392,16 +392,16 @@ permalink: /selectors
 <div class="field JS_field">
   <div class="field__value">
 
-    <div class="selector selector--readonly">
+    <div class="selector selector--expanded">
       <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">Include</div>
-      <div class="selector__item">
+      <div class="selector__item selector__item--selected">
         <div class="selector__block">
           <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #00BFFF;"></div>
           <div class="selector__blockPart selector__blockPart--field">Design</div>
         </div>
       </div>
       <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">And</div>
-      <div class="selector__item">
+      <div class="selector__item selector__item--selected">
         <div class="selector__block">
           <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #0BDA51;"></div>
           <div class="selector__blockPart selector__blockPart--field">Marketing</div>
@@ -409,20 +409,20 @@ permalink: /selectors
       </div>
     </div>
 
-    <div class="selector selector--readonly">
+    <div class="selector selector--expanded">
       <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">Or</div>
     </div>
 
-    <div class="selector selector--readonly">
+    <div class="selector selector--expanded">
       <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">Exclude</div>
-      <div class="selector__item">
+      <div class="selector__item selector__item--selected">
         <div class="selector__block">
           <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #0BDA51;"></div>
           <div class="selector__blockPart selector__blockPart--field">front-end</div>
         </div>
       </div>
       <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">Or</div>
-      <div class="selector__item">
+      <div class="selector__item selector__item--selected">
         <div class="selector__block">
           <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #F4CA16;"></div>
           <div class="selector__blockPart selector__blockPart--field">back-end</div>
@@ -437,22 +437,22 @@ permalink: /selectors
   <div class="field__label">Description</div>
   <div class="field__value">
 
-    <div class="selector selector--readonly" >
+    <div class="selector selector--expanded" >
       <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">Include</div>
-      <div class="selector__item">
+      <div class="selector__item selector__item--selected">
         <div class="selector__block">
           <div class="selector__blockPart selector__blockPart--field">improvement</div>
         </div>
       </div>
     </div>
 
-    <div class="selector selector--readonly">
+    <div class="selector selector--expanded">
       <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">And</div>
     </div>
 
-    <div class="selector selector--readonly">
+    <div class="selector selector--expanded">
       <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">Exclude</div>
-      <div class="selector__item">
+      <div class="selector__item selector__item--selected">
         <div class="selector__block">
           <div class="selector__blockPart selector__blockPart--field">design</div>
         </div>
@@ -466,16 +466,16 @@ permalink: /selectors
   <div class="field__label">Tags  Filter</div>
   <div class="field__value">
 
-    <div class="selector selector--readonly JS_has-popup" data-popid="#filter-tagpicker">
+    <div class="selector selector--expanded JS_has-popup" data-popid="#filter-tagpicker">
       <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">Include</div>
-      <div class="selector__item">
+      <div class="selector__item selector__item--selected">
         <div class="selector__block">
           <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #00BFFF;"></div>
           <div class="selector__blockPart selector__blockPart--field">Design</div>
         </div>
       </div>
       <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">And</div>
-      <div class="selector__item">
+      <div class="selector__item selector__item--selected">
         <div class="selector__block">
           <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #0BDA51;"></div>
           <div class="selector__blockPart selector__blockPart--field">Marketing</div>
@@ -483,20 +483,20 @@ permalink: /selectors
       </div>
     </div>
 
-    <div class="selector selector--readonly JS_selector">
+    <div class="selector selector--expanded JS_selector">
       <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">Or</div>
     </div>
 
-    <div class="selector selector--readonly JS_selector">
+    <div class="selector selector--expanded JS_selector">
       <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">Exclude</div>
-      <div class="selector__item">
+      <div class="selector__item selector__item--selected">
         <div class="selector__block">
           <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #f4ca16;"></div>
           <div class="selector__blockPart selector__blockPart--field">front-end</div>
         </div>
       </div>
       <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">Or</div>
-      <div class="selector__item">
+      <div class="selector__item selector__item--selected">
         <div class="selector__block">
           <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #e30022;"></div>
           <div class="selector__blockPart selector__blockPart--field">back-end</div>
@@ -511,34 +511,34 @@ permalink: /selectors
   <div class="field__label">Date  Filter</div>
   <div class="field__value">
 
-    <div class="selector selector--readonly JS_has-popup" data-popid="#filter-datepicker">
+    <div class="selector selector--expanded JS_has-popup" data-popid="#filter-datepicker">
       <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">Include</div>
-      <div class="selector__item">
+      <div class="selector__item selector__item--selected">
         <div class="selector__block">
           <div class="selector__blockPart selector__blockPart--field">next 2 weeks (12/03/18-25/03/18)</div>
         </div>
       </div>
       <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">And</div>
-      <div class="selector__item">
+      <div class="selector__item selector__item--selected">
         <div class="selector__block">
           <div class="selector__blockPart selector__blockPart--field">19/03/18-20/03/18</div>
         </div>
       </div>
     </div>
 
-    <div class="selector selector--readonly">
+    <div class="selector selector--expanded">
       <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">Or</div>
     </div>
 
-    <div class="selector selector--readonly">
+    <div class="selector selector--expanded">
       <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">Exclude</div>
-      <div class="selector__item">
+      <div class="selector__item selector__item--selected">
         <div class="selector__block">
           <div class="selector__blockPart selector__blockPart--field">today</div>
         </div>
       </div>
       <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">Or</div>
-      <div class="selector__item">
+      <div class="selector__item selector__item--selected">
         <div class="selector__block">
           <div class="selector__blockPart selector__blockPart--field">18/03/18</div>
         </div>
@@ -572,6 +572,7 @@ permalink: /selectors
   </div>
 </div>
 
+{% include popups/ms-single.html %}
 {% include popups/ms-status.html %}
 {% include popups/ms-status2.html %}
 {% include popups/multiSelector-tags-colors.html %}
